--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.0.4",
+    "classnames": "^2.3.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.18",
+    "sass": "^1.55.0",
+    "tailwindcss": "^3.2.1"
   }
 }
