--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
     "autoprefixer": "^10.4.13",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
     "sass": "^1.55.0",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.2.1",
+    "typescript": "4.8.4"
   }
 }
