--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "playwright test",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.0.4",
@@ -20,11 +22,16 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.27.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "autoprefixer": "^10.4.13",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.18",
     "sass": "^1.55.0",
     "tailwindcss": "^3.2.1",
