--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.0.4",
+    "axios": "^1.2.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
